Revision history for WWW-Crawler-Mojo

0.14 2015/10/22
  - Added experimental MySQL support for queue (harshals).
  - Improved documentations.
  - Added some example codes.

0.13 2015/03/25
  - Removed referrer_url attribute from job class.
  - Changed scrape API significantly.
  - Added context option for scrape method.
  - Improved documentations.
  - Improved examples.

0.12 2015/02/27
  - Updated dependency to Mojolicious v6.0.

0.11 2015/02/19
  - Updated dependency to Mojolicious v5.79.
  - Fixed a bug where connection count didn't detected for redirected urls.
  - Fixed a bug on checkbot example.
  - Fixed small bug on form submittion.
  - Fixed small bug on base tag detection.
  - Fixed small bug on charset detection.
  - Removed refer event in favor of callback for scraper.
  - Removed peeping server feature at all.
  - Deprecated resolved_uri attribute of Job class in favor of url.
  - Deprecated original_uri in favor of original_url.
  - Improved to crawl sitemap.xml too.
  - Improved html document detection by accepting more html like mime types.
  - Improved to use less memory.
  - Improved internal codes.
  - Added clock_speed attribute.

0.10 2015/02/08
  - Removed collect_urls_html method in favor of scrape.
  - Improved documentaion.
  - Improved url detection in CSSs.
  - Improved element handlers that is now well customizable with CSS selectors.

0.09 2015/02/03
  - Removed depth option.
  - Changed URL collecting method to instance-methods.
  - Improved form manipulation for emulating manual submition.
  - Improved documentation.

0.08 2015/01/29
  - Renamed browse method to scrape.
  - Improved documents.

0.07 2015/01/26
  - Removed additional_props on job class.
  - Renamed discover method to browse.
  - Removed peeping attribute in favor of peeping_port.
  - Improved error event API.
  - Added a feature for auto stop crawling when queue get empty.
  - Improved checkbot example.
  - Improved tests.
  - Improved documents.

0.06 2014/09/20