@@ -4,6 +4,7 @@ Revision history for WWW-Crawler-Mojo
   - Added experimental MySQL support for queue (harshals).
   - Improved documentations.
   - Added some example codes.
+  - Improved form submittion emulation on unselected and multi selected options.
 
 0.13 2015/03/25
   - Removed referrer_url attribute from job class.
